--- a/index.html
+++ b/index.html
@@ -4,27 +4,158 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Painel do Lojista</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+  <style>
+    /* Estilos CSS incorporados para simplificar */
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: 'Arial', sans-serif;
+    }
+
+    body {
+      background: #f0f2f5;
+      padding: 20px;
+    }
+
+    .container {
+      max-width: 1200px;
+      margin: 0 auto;
+    }
+
+    .header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-bottom: 20px;
+    }
+
+    .btn {
+      background: #007bff;
+      color: white;
+      border: none;
+      padding: 10px 20px;
+      border-radius: 8px;
+      cursor: pointer;
+      transition: background 0.3s;
+    }
+
+    .btn:hover {
+      background: #0056b3;
+    }
+
+    .sections {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      gap: 20px;
+    }
+
+    .section {
+      background: white;
+      padding: 20px;
+      border-radius: 12px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+    }
+
+    .order-card {
+      background: #f8f9fa;
+      padding: 15px;
+      margin: 10px 0;
+      border-radius: 8px;
+      border-left: 4px solid #007bff;
+    }
+
+    .order-status {
+      font-size: 0.9em;
+      color: #666;
+      margin-top: 8px;
+    }
+  </style>
 </head>
 <body>
-  <div class="dashboard-container">
-    <h1>Painel do Lojista</h1>
-    <button id="callDelivery">Chamar Entregador</button>
+  <div class="container">
+    <div class="header">
+      <h1>Painel do Lojista</h1>
+      <button class="btn" id="callDelivery">
+        <i class="fas fa-bell"></i> Chamar Entregador
+      </button>
+    </div>
+
     <div class="sections">
       <div class="section">
-        <h2>Pendente</h2>
-        <ul id="pendingOrders"></ul>
+        <h2>🕒 Pendente</h2>
+        <div id="pendingOrders"></div>
       </div>
       <div class="section">
-        <h2>Aceito</h2>
-        <ul id="acceptedOrders"></ul>
+        <h2>✅ Aceito</h2>
+        <div id="acceptedOrders"></div>
       </div>
       <div class="section">
-        <h2>Entregue</h2>
-        <ul id="deliveredOrders"></ul>
+        <h2>📦 Entregue</h2>
+        <div id="deliveredOrders"></div>
       </div>
     </div>
   </div>
-  <script src="dashboard.js"></script>
+
+  <!-- Firebase e configuração -->
+  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js"></script>
+  <script>
+    // Configuração do Firebase (substitua com seus dados)
+    const firebaseConfig = {
+      apiKey: "SUA_API_KEY",
+      authDomain: "SEU_PROJETO.firebaseapp.com",
+      projectId: "SEU_PROJETO",
+      storageBucket: "SEU_PROJETO.appspot.com",
+      messagingSenderId: "SEU_SENDER_ID",
+      appId: "SEU_APP_ID"
+    };
+
+    // Inicializar Firebase
+    const app = firebase.initializeApp(firebaseConfig);
+    const db = firebase.firestore();
+
+    // Função para criar pedido
+    document.getElementById('callDelivery').addEventListener('click', () => {
+      const address = prompt('Digite o endereço do cliente:');
+      if (address) {
+        db.collection('orders').add({
+          status: 'pending',
+          address: address,
+          createdAt: firebase.firestore.FieldValue.serverTimestamp()
+        });
+      }
+    });
+
+    // Função para renderizar pedidos
+    const renderOrders = (status, containerId) => {
+      db.collection('orders')
+        .where('status', '==', status)
+        .onSnapshot(snapshot => {
+          const container = document.getElementById(containerId);
+          container.innerHTML = '';
+          
+          snapshot.forEach(doc => {
+            const order = doc.data();
+            const orderHtml = `
+              <div class="order-card">
+                <p><strong>Endereço:</strong> ${order.address}</p>
+                <p class="order-status">
+                  Status: ${order.status}<br>
+                  ${order.createdAt?.toDate().toLocaleString() || ''}
+                </p>
+              </div>
+            `;
+            container.innerHTML += orderHtml;
+          });
+        });
+    };
+
+    // Iniciar listeners
+    renderOrders('pending', 'pendingOrders');
+    renderOrders('accepted', 'acceptedOrders');
+    renderOrders('delivered', 'deliveredOrders');
+  </script>
 </body>
-</html>
+  </html>
